<resources>
    <string name="app_name">Places Finder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_create_account">Create Account</string>
    <string name="msg_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="or">OR</string>
    <string name="please_login_first_to_use_this_app">Please login first to use this app.</string>
    <string name="action_enable">Enable</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="msg_location_disable_error">We need to access to your location, enable location provider to find current location.</string>
    <string name="msg_please_enter_email_password">Please enter email and password.</string>
    <string name="msg_cancelled">Cancelled</string>
    <string name="settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_suggest_place">Suggest Place</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="msg_cannot_connect_to_server">Cannot connect to the server, please try again later.</string>
    <string name="msg_logging_out">Logging out . . .</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="code_name">Code name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="error_enter_these_form_to_create_new_account">Enter these form to create new account.</string>
    <string name="msg_loading">Loading</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="action_save">Save</string>
    <string name="search_title">Search</string>
    <string name="error_check_internet_connection">Please check your internet connection, and try again.</string>
    <string name="error_permission_denied">Permission Denied</string>
    <string name="error_we_need_to_access_to_location">We need to access to your location, enable location permission to find current location.</string>
    <string name="action_submit">Submit</string>
    <string name="action_setting">Setting</string>
    <string name="place_name">Name</string>
    <string name="place_type">Type</string>
    <string name="place_address">Address</string>
    <string name="place_detail">Detail</string>
    <string name="choose_location">Choose Location</string>
    <string name="direction">Direction</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>
    <string name="error_camera_storage_permission_denied">We need to access to camera and storage, please enable permission to choose photo.</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="action_send">Send</string>
    <string name="title">Title</string>
    <string name="feedback">Feedback</string>
    <string name="error_session_expired">Session Expired, Please login again.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="description">Description</string>
</resources>
