<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Location : 1239210398190, 12382183901" />

            <Button
                android:id="@+id/btn_get_location"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/choose_location"
                android:theme="@style/AppTheme.Button.Gray" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_place_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_type"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textIsSelectable="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_place_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_address"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_place_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/place_detail"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_place_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/action_submit"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>